# driftool

./: .gitignore  .gitmodules  README.md  build.sh  config.template.json  config.template.yaml  deb_run.sh  deb_setup.sh  debrun.sh  dockerfile  driftool.yaml  input-example.csv  main.py  pyproject.toml  requirements.txt  run.sh  test.sh  thread.py
cmd/: git_add.sh
doc/: Configuration.md  DeveloperSetup.md  DockerSetup.md  PlotMetricGuide.md  docmodels.mdj
driftool/: main.py  thread.py
driftool.kt/: build.gradle  localrun.sh  settings.gradle
driftool.kt/gradle/wrapper/: gradle-wrapper.properties
driftool/analysis/: analysis.py  async_exec.py  csv_data.py  directory.py  plot.py  repository_handler.py
driftool/data/: config_file.py  distance.py  measured_environment.py
driftool_kt/: build.gradle  localrun.sh  localrun_multithread.sh  settings.gradle  testrun.sh
driftool_kt/systest/: localrun_multithread.sh  localrun_singlethread.sh  setup.sh  testrun_multi_no_file_actions.sh  testrun_single_blacklist.sh  testrun_single_combined_list.sh  testrun_single_no_file_actions.sh
example/: example_config.yaml
example/conflict-example/: LICENSE  README.md
lib/analysis/: analysis.py  async_exec.py  directory.py  plot.py  repository_handler.py
lib/data/: config_file.py  distance.py  measured_environment.py  pairwise_distance.py  sysconf.py
math/: embedding.py
resources/: report.template.html
src/driftool/: main.py  thread.py
tests/: test_analysis.py  test_analysis_integration.py  test_config_reading.py  test_csv_drift.py
volume/: config.template.yaml
(+86 files in other folders)
