[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driftool"
version = "0.0.1"
authors = [
  { name="Karl Kegel", email="karl.kegel@driftool.io" },
]
description = "driftool"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3"
]